k8s/clusters/homelabrestore01/apps/qbittorrent/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: restore-qbittorrent
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/enforce-version: v1.31
