k8s/clusters/homelabrestore01/apps/qbittorrent/networkpolicy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: restore-qbittorrent
spec:
  podSelector: {}
  policyTypes: [Ingress, Egress]
